2009-06-14  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/youtube/totem-youtube.c (set_up_tree_view),
	(resolve_t_param_cb), (starting_video_cb):
	* src/plugins/youtube/youtube.ui:
	* src/totem-cell-renderer-video.c (get_size),
	(totem_cell_renderer_video_get_size),
	(totem_cell_renderer_video_render):
	* src/totem-video-list.c (totem_video_list_class_init),
	(row_activated_cb), (show_popup_menu):
	* src/totemvideolist-marshal.list: Fix video list rendering for the
	YouTube plugin, as well as playback of related videos.

2009-06-14  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/youtube/totem-youtube.c (resolve_t_param_cb),
	(resolve_t_param), (query_progress_cb),
	(open_in_web_browser_activate_cb): Update YouTube plugin to use
	libgdata 0.4.0 API. (Closes: #584691)

2009-06-12  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/youtube/youtube.ui: Fix an errant ID. (Closes: #585518)

2009-06-08  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* src/backend/bacon-video-widget-gst-0.10.c:
	If we have playbin2 from gst-plugins-base 0.10.23.1 or newer use
	the new {audio,video,text}-tags-changed signals for noticing if
	tags have changed. This also gives us immediately the corresponding
	stream id and the type of the stream and makes it unnecessary to
	try to get the type via the tag messages' sender.

	This fixes bug #584689, prevents tags for unused streams to be
	displayed and makes sure that audio/video tags of a demuxer or
	other generic elements are used.

2009-06-07  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* src/backend/bacon-video-widget-gst-0.10.c:
	Use gst_message_parse_buffering() instead of manually getting
	the percents from the message.

2009-06-03  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.in:
	* src/plugins/youtube/totem-youtube.c
	(increment_progress_bar_fraction), (query_finished_cb),
	(execute_query): Bump to libgdata >= 0.4.0 to work around