@@ -1,3 +1,9 @@
+2009-06-30  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-object.c (totem_action_handle_key_press):
+	When there's a DVD menu showing, use the arrow keys to
+	navigate around, and the Enter key to select (Closes: #580351)
+
 2009-06-14  Philip Withnall  <philip@tecnocode.co.uk>
 
 	* src/plugins/youtube/totem-youtube.c (set_up_tree_view),
